--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "ignite_gym_app",
+  "name": "ignite_gym_mobile",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/themed": "^1.1.42",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.22",
+    "expo-font": "^12.0.9",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.74.3",
+    "react-native-svg": "^15.4.0",
+    "react-native-vector-icons": "^10.1.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@tsconfig/react-native": "^3.0.5",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.3.3",
-    "@types/react-test-renderer": "^18.3.0",
-    "typescript": "^5.5.4"
+    "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "react-native-svg-transformer": "^1.5.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
