--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@gluestack-ui/themed": "^1.1.42",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.22",
     "expo-font": "^12.0.9",
     "expo-splash-screen": "^0.27.5",
@@ -22,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
     "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.1.12"
