--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-svg": "^15.4.0",
+    "react-native-svg": "^15.5.0",
     "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.1.12"
   },
