--- a/app.json
+++ b/app.json
@@ -2,6 +2,14 @@
   "expo": {
     "name": "Ignite_Gym_App",
     "slug": "Ignite_Gym_App",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ]
   }
 }
