--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.5.0",
     "react-native-vector-icons": "^10.1.0",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
