--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.22",
+    "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
@@ -27,8 +29,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.5.0",
     "react-native-vector-icons": "^10.1.0",
-    "styled-components": "^6.1.12",
-    "expo-image-picker": "~15.0.7"
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
