--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/themed": "^1.1.42",
+    "@hookform/resolvers": "^3.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -24,12 +25,14 @@
     "react": "^18.2.0",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-native": "^0.74.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.5.0",
     "react-native-vector-icons": "^10.1.0",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
